# score-manager

./: .gitignore  LICENSE  README.md
.github/: pull_request_template.md
.github/workflow/: clippy.yml  diff.yml  fmt.yml  test.yml
cache/: solidity-files-cache.json
client/: .env.example  Cargo.toml  README.md  config.toml  config.toml.dev  config.toml.local  rust-toolchain.toml
client/abi/: ComputeManager.json
client/src/: lib.rs  main.rs  sol.rs
client/tests/: submit_openrank_tx.rs
contracts/: .env.example  .env.example.dev  README.md  args  foundry.toml
contracts/broadcast/DeployComputeManager.s.sol/80002/: run-1732721245.json  run-latest.json
contracts/script/: DeployComputeManager.s.sol
contracts/src/: ComputeManager.sol
contracts/test/: ComputeManager.t.sol
