[package]
name = "openrank-smart-contract-client"
version = "0.1.0"
authors = [
    "Eugene Kim <ek@karma3labs.com>",
    "Filip Lazović <filip@karma3labs.com>",
]
edition = "2021"
license = "MIT"

[dependencies]
openrank-common = { git = "ssh://git@github.com/openrankprotocol/openrank.git", package = "openrank-common" }

tokio = { version = "1.38", default-features = false, features = ["full"]}
tracing = "0.1.37"
alloy = { version = "0.3", features = ["full", "node-bindings"] }
alloy-rlp = "0.3.5"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
eyre = "0.6.12"
