[package]
name = "openrank-smart-contract-client"
version = "0.1.0"
authors = [
    "Eugene Kim <ek@karma3labs.com>",
    "Filip Lazović <filip@karma3labs.com>",
]
edition = "2021"
license = "MIT"

[dependencies.openrank-common]
git = "https://github.com/openrankprotocol/openrank.git"
rev = "32e0fe732f61f52af00761ee5c70dbeeb79ccc7e"
package = "openrank-common"

[dependencies]
tokio = { version = "1.38", default-features = false, features = ["full"] }
tracing = "0.1.37"
alloy = { version = "0.3", features = ["full", "node-bindings"] }
alloy-rlp = "0.3.5"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
eyre = "0.6.12"
jsonrpsee = { version = "0.24.7", features = ["client"] }
clap = { version = "4.5.21", features = ["derive"] }
hex = "0.4.3"
